--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -7,16 +7,6 @@
     <body>
         <h1>Javascript Language Basics</h1>
     </body>
-    <!--script src="script%20data%20types%20and%20variables.js"></script-->
-    <!--script src="operators.js"></script-->
-    <!--script src="coding_challenge_1.js"></script-->
-    <!--script src="control_statements.js"></script-->
-    <!--script src="coding_challenge_2.js"></script-->
-    <!--script src="functions.js"></script-->
-    <!--script src="arrays.js"></script-->
-    <!--script src="coding_challenge_3.js"></script-->
-    <!--script src="objects_properties_methods.js"></script-->
-    <!--script src="coding_challenge_4.js"></script-->
-    <!--script src="loops_and_iteration.js"></script-->
-    <script src="coding_challenge_5.js"></script>
+    <script src="script_data_types_and_variables.js"></script>
+    
 </html>
