--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -8,5 +8,5 @@
         <h1>Javascript Language Basics</h1>
     </body>
     <script src="script_data_types_and_variables.js"></script>
-    
+    <script src="operators.js"></script>
 </html>
