--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -9,4 +9,7 @@
     </body>
     <script src="script_data_types_and_variables.js"></script>
     <script src="operators.js"></script>
+    <script src="arrays.js"></script>
+    <script src="function.js"></script>
+    <script src="loops_and_iteration.js"></script>
 </html>
