--- a/JS Basics/index.html
+++ b/JS Basics/index.html
@@ -12,4 +12,5 @@
     <script src="arrays.js"></script>
     <script src="function.js"></script>
     <script src="loops_and_iteration.js"></script>
+    <script src="objects_properties_methods.js"></script>
 </html>
